# realty_backend

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_picture.rs
src/: main.rs
src/entities/: picture.rs  prelude.rs  realtor_object.rs
src/entity/: mod.rs  picture.rs  realtor_object.rs
