[package]
name = "realty_backend"
version = "0.1.0"
edition = "2021"
authors = ["Lachugin PinkyGoose Vladimir <lachuginv@list.ru>"]

[workspace]
members = [".", "./migration"]

[dependencies]

migration = { path = "./migration" }

axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
async-trait = "0.1.56"
utoipa = { version = "4.2.3", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
futures = "0.3.21"
validator = "0.16.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
url = { version = "2", features = ["serde"] }
prometheus-client = "0.21.0"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
aliri_oauth2 = "0.10.1"
aliri_traits = "0.1.1"
argon2 = { version = "0.5.0", features = ["password-hash"] }
dataurl = "0.1.2"
image = "0.25.5"
convert_case = "0.6.0"
tokio-util = "0.7.11"
regex = "1.10.5"
base64 = "0.22.1"
rmpv = { version = "1.3.0", features = ["serde", "with-serde"] }
rmp-serde = "1.3.0"
sea-query = "0.20.0"
[dependencies.sea-orm]
version = "1"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]
